--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,28 +17,14 @@ jobs:
           go-version: "1.22"
 
       - name: Build app
-        run: go build -o app ./cmd/server
+        run: go build -o app .
+
+      - name: Deploy binary
+        run: |
+          sudo cp ./app /home/ferytell/API-Golang-Books/app
+          sudo chown ferytell:ferytell /home/ferytell/API-Golang-Books/app
 
       - name: Restart service
         run: |
           sudo systemctl restart api-books
           sudo systemctl status api-books --no-pager -l
-
-      # - name: Deploy via SSH
-      #   uses: appleboy/scp-action@v0.1.7
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USER }}
-      #     key: ${{ secrets.SERVER_SSH_KEY }}
-      #     source: "app"
-      #     target: "/home/ferytell/API-Golang-Books/"
-
-      # - name: Restart service
-      #   uses: appleboy/ssh-action@v1.0.3
-      #   with:
-      #     host: ${{ secrets.SERVER_HOST }}
-      #     username: ${{ secrets.SERVER_USER }}
-      #     key: ${{ secrets.SERVER_SSH_KEY }}
-      #     script: |
-      #       sudo systemctl restart api-books
-      #       sudo systemctl status api-books --no-pager -l
